--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ skip_render:
 about: /about
 donation: /donation
 navigation: /navigation
+books: /books
 
 # Writing
 new_post_name: :title.md # File name of new posts
